# zerogit

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
docs/: zerogit-architecture.md  zerogit-detailed-design.md  zerogit-interface.md  zerogit-requirements.md  zerogit-test-spec.md
issues/: 001-project-init.md  002-error-types.md  003-test-fixtures.md  004-sha1-hash.md  005-zlib-decompression.md  006-filesystem-utils.md  007-oid.md  008-object-store.md  009-blob-parse.md  010-tree-parse.md  011-commit-parse.md  012-object-enum.md  013-ref-resolution.md  014-head-branch-types.md  015-index-parse.md  016-repository-basic.md  017-repository-object-methods.md  018-log-iterator.md  019-status.md  020-public-api.md  021-mvp-integration-test.md  022-index-write.md  023-object-write.md  024-repository-add.md  025-repository-create-commit.md  026-branch-operations.md  issue-027-remote-branches-tags.md  issue-028-log-filtering.md  issue-029-tree-diff.md  issue-030-commit-diff.md  issue-031-workdir-index-diff.md  issue-032-commit-oid.md  issue-033-repository-branches.md  issue-034-repository-init.md  issue-035-log-path-filter-fix.md  issue-036-config-read.md  zerogit-issues.md
src/: error.rs  lib.rs  log.rs  repository.rs  status.rs
src/config/: mod.rs  parser.rs
src/diff/: mod.rs
src/index/: mod.rs  reader.rs  writer.rs
src/infra/: compression.rs  fs.rs  hash.rs  mod.rs
src/objects/: blob.rs  (+6 more)
tests/: branch_test.rs  config_test.rs  diff_test.rs  refs_test.rs  repository_test.rs  staging_test.rs  status_test.rs
(+9 files in other folders)
